# baozi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml
crates/baozi/: Cargo.toml
crates/baozi-core/: Cargo.toml
crates/baozi-core/src/: diagnostic.rs  error.rs  lib.rs  material.rs  math.rs  scene.rs  validation.rs
crates/baozi-core/tests/: scene_validation.rs
crates/baozi-format-gltf/: Cargo.toml
crates/baozi-format-gltf/src/: detect.rs  lib.rs  parser.rs
crates/baozi-format-gltf/tests/: detect.rs  skinning.rs  static_mesh.rs
crates/baozi-format-gltf/tests/common/: mod.rs
crates/baozi-format-obj/: Cargo.toml
crates/baozi-format-obj/src/: detect.rs  lib.rs  mesh_builder.rs  mtl.rs  obj.rs  parser.rs
crates/baozi-format-obj/tests/: detect.rs  geometry.rs  limits.rs  malformed.rs  materials.rs
crates/baozi-format-obj/tests/common/: mod.rs
crates/baozi-format-ply/: Cargo.toml
crates/baozi-format-ply/src/: detect.rs  lib.rs  parser.rs
crates/baozi-format-ply/tests/: detect.rs  geometry.rs  malformed.rs
crates/baozi-format-ply/tests/common/: mod.rs
crates/baozi-format-stl/: Cargo.toml
crates/baozi-format-stl/src/: ascii.rs  binary.rs  detect.rs  lib.rs  parser.rs
crates/baozi-format-stl/tests/: ascii.rs  binary.rs  detect.rs  malformed.rs
crates/baozi-format-stl/tests/common/: mod.rs
crates/baozi-import/: Cargo.toml
crates/baozi-import/src/: context.rs  format.rs  lib.rs  registry.rs
crates/baozi-io/: Cargo.toml
crates/baozi-io/src/: fs.rs  lib.rs  limits.rs  memory.rs  path.rs
crates/baozi-postprocess/: Cargo.toml
crates/baozi-postprocess/src/: lib.rs  pipeline.rs  preset.rs
crates/baozi-postprocess/tests/: generate_normals.rs  validate_scene.rs
crates/baozi-test-support/: Cargo.toml
crates/baozi-test-support/src/: lib.rs  snapshot.rs  support_matrix.rs
crates/baozi-test-support/tests/: snapshot.rs
crates/baozi/benches/: import_baseline.rs
crates/baozi/examples/: diagnostics.rs  import_bytes.rs  import_memory_sidecars.rs  postprocess.rs  wasm_memory.rs
crates/baozi/src/: lib.rs
crates/baozi/tests/: gltf_facade.rs  importer_api.rs  obj_facade.rs  ply_facade.rs  stl_facade.rs  thread_safety.rs
docs/: roadmap.md
docs/adr/: 0001-baozi-assimp-compatible-architecture.md  0002-runtime-concurrency-observability.md  0003-core-scene-ir-and-material-model.md  0004-parser-backend-and-format-coverage-policy.md  0005-testing-fuzzing-and-differential-oracle-strategy.md  0006-public-api-versioning-and-crate-stability-policy.md  0007-workspace-crate-graph-feature-flags-msrv-and-ci-gates.md  0008-math-coordinate-units-and-numeric-policy.md  0009-data-ownership-zero-copy-lifetimes-and-memory-layout.md  0010-asset-io-virtual-filesystem-uri-archive-and-path-security.md  0011-format-support-tiers-and-compatibility-charter.md  0012-material-texture-image-and-color-space-policy.md  0013-post-process-pipeline-semantics-presets-and-mutation-model.md  0014-parser-security-unsafe-ffi-and-panic-boundary-policy.md  0015-mesh-topology-vertex-attributes-skinning-and-animation-semantics.md  0016-import-options-presets-and-configuration-precedence.md  0017-serialization-snapshot-and-cache-boundary.md  0018-parser-tooling-and-format-owned-parser-policy.md  0019-parser-diagnostic-streaming-and-generated-code-contract.md  0020-import-lifecycle-and-report-contract.md  0021-extension-registry-and-format-descriptor-governance.md  0022-per-import-resource-ledger-and-budget-accounting.md  0023-material-and-custom-attribute-extension-model.md  0024-public-api-hardening-and-stability-tiers.md  0025-scene-ir-invariants-and-validation-boundaries.md  0026-validation-snapshot-and-fuzz-gates.md  0027-gltf-backend-ownership-and-replacement-policy.md
docs/architecture/: parser-tool-audit-checklist.md
docs/contributing/: ci.md  format-onboarding.md  fuzzing.md  release-policy.md
docs/formats/: _template.md  gltf.md  obj.md  ply.md  stl.md  support-matrix.md
docs/knowledge/engineering/: current-state.md  index.md  log.md
docs/knowledge/engineering/decisions/: 2026-07-08T151044Z-adopt-assimp-style-rust-owned-import-architecture.md
docs/knowledge/engineering/progress/: 2026-07-08T151044Z-assimp-replication-research-draft.md  2026-07-09T091605Z-obj-mtl-importer-u6-u8-progress.md  2026-07-09T122858Z-gltf-quality-gates-and-backend-policy-progress.md  2026-07-09T141026Z-gltf-resource-skin-and-fuzz-hardening.md
docs/knowledge/engineering/registry/: baozi-assimp-replication-research-codex-root.md  baozi-stl-importer-vertical-slice-codex-root.md  format-beta-hardening-and-postprocess-foundation-codex-root.md  github-actions-ci-upgrade-codex-root.md  import-governance-foundation-refactor-codex-root.md  mesh-topology-triangulation-codex-root.md  obj-mtl-importer-codex-root.md
docs/model/: coordinate-and-render-conventions.md  scene-ir.md
docs/plans/: 2026-07-09-001-feat-workspace-scaffold-plan.md  2026-07-09-002-feat-stl-importer-vertical-slice-plan.md  2026-07-09-003-chore-github-actions-ci-upgrade-plan.md  2026-07-09-004-feat-mesh-topology-and-triangulation-plan.md  2026-07-09-005-feat-obj-mtl-importer-plan.md  2026-07-09-006-refactor-import-governance-foundation-plan.md  2026-07-09-007-feat-gltf-resource-and-skin-plan.md  2026-07-09-008-feat-format-beta-postprocess-plan.md
docs/research/: assimp-replication-study.md  gltf-rs-backend-notes.md
docs/research/baozi-rust-model-importer-ecosystem/: fields.yaml  outline.yaml  report.md
docs/security/: parser-threat-model.md
docs/testing/: snapshot-and-fixture-policy.md
fuzz/: Cargo.toml
fuzz/corpus/gltf_import/: skinned_data_uri.gltf  triangle.glb  triangle_data_uri.gltf  triangle_external.gltfbin
fuzz/corpus/ply_import/: binary_little_triangle.ply  malformed_header.ply
fuzz/corpus/stl_import/: ascii_triangle.stl
fuzz/fuzz_targets/: gltf_import.rs  obj_import.rs  obj_postprocess.rs  ply_import.rs  stl_import.rs
(+43 files in other folders)
