[package]
name = "baozi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.95"

[package.metadata]
cargo-fuzz = true

[dependencies]
baozi = { path = "../crates/baozi", default-features = false }
baozi-format-gltf = { path = "../crates/baozi-format-gltf" }
baozi-format-obj = { path = "../crates/baozi-format-obj" }
baozi-format-stl = { path = "../crates/baozi-format-stl" }
libfuzzer-sys = "0.4"

[[bin]]
name = "stl_import"
path = "fuzz_targets/stl_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "obj_import"
path = "fuzz_targets/obj_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "obj_postprocess"
path = "fuzz_targets/obj_postprocess.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gltf_import"
path = "fuzz_targets/gltf_import.rs"
test = false
doc = false
bench = false

[workspace]
