[package]
name = "baozi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
mint = ["dep:mint"]

[dependencies]
mint = { workspace = true, optional = true }
thiserror.workspace = true
