[package]
name = "baozi-format-ply"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description.workspace = true
publish = false

[dependencies]
baozi-core.workspace = true
baozi-import.workspace = true

[dev-dependencies]
baozi-test-support.workspace = true
