[package]
name = "baozi-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
baozi-core.workspace = true
baozi-io.workspace = true
