[package]
name = "baozi-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[features]
default = []
fs = []

[dependencies]
baozi-core.workspace = true
